--- a/src/app/dashboard/info-country/info-country.component.html
+++ b/src/app/dashboard/info-country/info-country.component.html
@@ -11,6 +11,8 @@
                     <div class="country-details__item">Region: {{datos.location.region}}</div>
                     <div class="country-details__item">Latitud: {{datos.location.lat}} Longitud: {{datos.location.lon}}
                     </div>
+                    <div class="" style="color: rgb(0, 0, 0);">LocalTime: {{datos.location.localtime}}
+                    </div>
                 </div>
             </div>
         } @else {
@@ -18,13 +20,3 @@
         }
         </div>
 </div>
-
- <!-- "location": {
-"name": "Bogota",
-"region": "Cundinamarca",
-"country": "Colombia",
-"lat": 4.6,
-"lon": -74.083,
-"tz_id": "America/Bogota",
-"localtime_epoch": 1749830071,
-"localtime": "2025-06-13 10:54" -->
