--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
 
         <div class="dashboard-grid">
             <!-- País Seleccionado -->
-            <app-select-country [datos]="datosWeather"></app-select-country>
+            <app-info-country [datos]="datosWeather"></app-info-country>
             <!-- Clima -->
             <app-weather [datos]="datosWeather"></app-weather>
             <!-- Países Disponibles -->
@@ -45,63 +45,21 @@
         </div>
 
         <!-- Segunda fila de cards -->
-        <div class="dashboard-grid dashboard-grid--large">
+        <div class="dashboard-grid">
             <!-- Otras Tareas -->
-            <div class="card">
-                <div class="card__header">
-                    <h2 class="card__title">Otras tareas</h2>
-                </div>
-                <div class="card__body">
-                    <div class="tasks-list">
-                        <div class="task-item">
-                            <div class="task-icon"></div>
-                            <div class="task-text">Realizar documentación en swagger</div>
-                        </div>
-                        <div class="task-item">
-                            <div class="task-icon"></div>
-                            <div class="task-text">Tomar curso React</div>
-                        </div>
-                        <div class="task-item">
-                            <div class="task-icon"></div>
-                            <div class="task-text">Estudiar SpringBoot</div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+            <app-task></app-task>
             <!-- Zonas Horarias -->
-            <div class="card">
-                <div class="card__header">
-                    <h2 class="card__title">Zonas horarias disponibles</h2>
-                </div>
-                <div class="card__body">
-                    <div class="timezone-list">
-                        <div class="timezone-item">America/Mexico_City</div>
-                        <div class="timezone-item">America/Tijuana</div>
-                        <div class="timezone-item">America/Merida</div>
-                        <div class="timezone-item">America/Cancun</div>
-                        <div class="timezone-item">America/Monterrey</div>
-                        <div class="timezone-item">America/Chihuahua</div>
-                        <div class="timezone-item">America/Matamoros</div>
-                    </div>
-                </div>
-            </div>
-
+            <app-timezone [datos]="zonesCountry" (zoneSelected)="manejarZonaSeleccionada($event)"></app-timezone>
             <!-- Hora Actual -->
-            <div class="card">
-                <div class="card__header">
-                    <h2 class="card__title">Hora</h2>
-                </div>
-                <div class="card__body">
-                    <div class="time-display">
-                        <div class="current-time" id="currentTime">7:56:47 PM</div>
-                        <div class="current-timezone">America/Mexico_City</div>
-                        <div>
-                            11/1/2021
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <app-hour-zone [zona]="selectedZone"></app-hour-zone>
         </div>
     </main>
+
+    <div class="alert-card">
+        <div class="alert-card-body">
+            ✅
+            <img src="https://avatars.githubusercontent.com/u/113479606?v=4" alt="">
+            <span>Inicio sesión exitoso</span>
+        </div>
+    </div>
 </div>
