--- a/src/app/dashboard/weather/weather.component.sass
+++ b/src/app/dashboard/weather/weather.component.sass
@@ -3,17 +3,16 @@
 .weather-display
     display: flex
     align-items: center
-    gap: 20px
-    margin-bottom: 16px
+    justify-content: space-around       
 
-.weather-icon
-    font-size: 48px
-    color: $secondary-blue
+.img-weather 
+    width: 100px
+    height: 100px
 
 .weather-temp
-    font-size: 36px
-    font-weight: 300
-    color: $text-primary
+    font-size: 30px
+    font-weight: 400
+    color: $text-secondary
 
 .weather-desc
     color: $text-secondary
