--- a/src/styles.sass
+++ b/src/styles.sass
@@ -6,6 +6,8 @@ body
     font-family: 'Segoe UI' 
     
 .card
+    width: 100%
+    height: 100%
     background: $card-background
     border-radius: $border-radius
     box-shadow: $shadow-light
