--- a/src/styles.sass
+++ b/src/styles.sass
@@ -32,3 +32,16 @@ body
 
 .card__body
     padding: 24px
+
+.main-content__header
+    margin-bottom: 32px
+
+.page-title
+    font-size: 28px
+    font-weight: 500
+    color: $text-primary
+    margin-bottom: 8px
+
+.page-subtitle
+    color: $text-secondary
+    font-size: 16px
