--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -7,10 +7,10 @@
                 <input type="email" formControlName="email" placeholder="Ingrese email">
                 @if (loginForm.get('email')?.invalid && loginForm.get('email')?.touched) {
                     @if (loginForm.get('email')?.errors?.['required']) {
-                        <span>El email es requerido</span>                        
+                        <span class="message-validator">El email es requerido</span>                        
                     }
                     @if (loginForm.get('email')?.errors?.['email']) {
-                        <span>Introduce un email válido</span>                        
+                        <span class="message-validator">Introduce un email válido</span>                        
                     }
                 }
             </div>
@@ -19,15 +19,15 @@
                 <input type="password" formControlName="password" placeholder="Ingrese la contraseña">
                 @if (loginForm.get('password')?.invalid && loginForm.get('password')?.touched) {
                     @if (loginForm.get('password')?.errors?.['required']) {
-                        <span>La contraseña es requerida</span>                        
+                        <span class="message-validator">La contraseña es requerida</span>                        
                     }
                     @if (loginForm.get('password')?.errors?.['minlength']) {
-                        <span>La contraseña debe tener al menos 3 caracteres</span>                        
+                        <span class="message-validator">La contraseña debe tener al menos 3 caracteres</span>                        
                     }
                 }
             </div>
             @if (errorMessage) {
-                <div class="error-message">
+                <div class="message-validator">
                     {{ errorMessage }}
                 </div>
             }
