se organizo estructura del entre componentes, tambien se crearon mensajes de alert para el login y signup

--- a/src/app/auth/login/login.component.sass
+++ b/src/app/auth/login/login.component.sass
@@ -16,12 +16,11 @@
     color: #ff4f4f
     font-size: 13px
     
-
 .form-container
     background: #ffff
     border-radius: 12px
     box-shadow: $shadow-medium
-    padding: 40px
+    padding: 35px
     width: 100%
     max-width: 450px
     position: relative
@@ -30,19 +29,11 @@
 .form-group
     display: flex
     flex-direction: column
-    gap: 10px
     font-size: 16px 
     
-    &.double
-        flex-direction: row 
-        gap: 10px
-
-        .form-group
-            flex: 1       
-
     label
         color: $text-primary
-        margin-top: 5px 
+        margin: 10px 4px 6px 
         
     input         
         padding: 12px
