--- a/src/app/dashboard/components/hour-zone/hour-zone.component.html
+++ b/src/app/dashboard/components/hour-zone/hour-zone.component.html
@@ -4,11 +4,9 @@
     </div>
     <div class="card__body">
         <div class="time-display">
-            <div class="current-time" id="currentTime">{{time}}</div>
-            <div class="current-timezone">{{zona}}</div>
-            <div>
-                {{date}}
-            </div>
+            <div class="current-time">{{date}}</div>
+            <div class="current-time">{{time}}</div>
         </div>
+        <div class="current-timezone">{{zona}}</div>       
     </div>
 </div>
