--- a/src/app/dashboard/components/hour-zone/hour-zone.component.sass
+++ b/src/app/dashboard/components/hour-zone/hour-zone.component.sass
@@ -1,11 +1,13 @@
 @use '../../../../_variables' as *
 
 .time-display
-    text-align: center
+    display: flex
+    gap: 10px
+    text-align: center    
     padding: 16px 0
 
 .current-time
-    font-size: 24px
-    font-weight: 300
-    color: var(--text-primary)
+    color: $text-secondary
+    font-size: 18px
+    font-weight: 400
     margin-bottom: 4px
